; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_idr.c_idr_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_idr.c_idr_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.idr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @idr_alloc(%struct.idr* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.idr*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.idr* %0, %struct.idr** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.idr*, %struct.idr** %6, align 8
  %13 = getelementptr inbounds %struct.idr, %struct.idr* %12, i32 0, i32 0
  %14 = call i32 @mtx_lock(i32* %13)
  %15 = load %struct.idr*, %struct.idr** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @idr_alloc_locked(%struct.idr* %15, i8* %16, i32 %17, i32 %18)
  store i32 %19, i32* %11, align 4
  %20 = load %struct.idr*, %struct.idr** %6, align 8
  %21 = getelementptr inbounds %struct.idr, %struct.idr* %20, i32 0, i32 0
  %22 = call i32 @mtx_unlock(i32* %21)
  %23 = load i32, i32* %11, align 4
  ret i32 %23
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @idr_alloc_locked(%struct.idr*, i8*, i32, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
